--- a/index.html
+++ b/index.html
@@ -72,6 +72,48 @@
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
+            <form class="form-in-modal">
+              <b class="form-title"
+                >Leave your contacts and we will call you back</b
+              >
+
+              <div class="form-field">
+                <label class="form-label" for="name">Name</label>
+                <input class="form-input" type="text" name="name" id="name" />
+              </div>
+
+              <div class="form-field">
+                <label class="form-label" for="tel">Phone</label>
+                <input class="form-input" type="tel" name="tel" id="tel" />
+              </div>
+
+              <div class="form-field">
+                <label class="form-label" for="email">Email</label>
+                <input
+                  class="form-input"
+                  type="email"
+                  name="email"
+                  id="email"
+                />
+              </div>
+              <div class="form-field">
+                <label class="form-label" for="comment">Comment</label>
+                <textarea
+                  name="comment"
+                  id="comment"
+                  cols=""
+                  rows="10"
+                  placeholder="Text input"
+                ></textarea>
+              </div>
+
+              <input type="checkbox" name="check" id="check" />
+              <label for="check"
+                >I accept the terms and conditions of the Privacy Policy</label
+              >
+              <br />
+              <button type="submit">Send</button>
+            </form>
             <button type="button" data-modal-close class="modal-btn">
               <svg class="modal-img">
                 <use
