--- a/index.html
+++ b/index.html
@@ -80,11 +80,21 @@
               <div class="form-field">
                 <label class="form-label" for="name">Name</label>
                 <input class="form-input" type="text" name="name" id="name" />
+                <svg class="form-icon" width="18" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-icon-name.svg#icon-form-icon-name"
+                  ></use>
+                </svg>
               </div>
 
               <div class="form-field">
                 <label class="form-label" for="tel">Phone</label>
                 <input class="form-input" type="tel" name="tel" id="tel" />
+                <svg class="form-icon" width="12" height="12">
+                  <use
+                    href="./images/icons.svg/symbol-form-modal.svg#icon-form-icon-tel"
+                  ></use>
+                </svg>
               </div>
 
               <div class="form-field">
@@ -95,10 +105,16 @@
                   name="email"
                   id="email"
                 />
+                <svg class="form-icon" width="12" height="12">
+                  <use
+                    href="./images/icons.svg/symbol-form-modal.svg#icon-form-icon-email"
+                  ></use>
+                </svg>
               </div>
               <div class="form-field">
                 <label class="form-label" for="comment">Comment</label>
                 <textarea
+                  class="form-comment"
                   name="comment"
                   id="comment"
                   cols=""
@@ -107,12 +123,22 @@
                 ></textarea>
               </div>
 
-              <input type="checkbox" name="check" id="check" />
-              <label for="check"
-                >I accept the terms and conditions of the Privacy Policy</label
-              >
-              <br />
-              <button type="submit">Send</button>
+              <div class="form-field">
+                <input
+                  class="form-field-check"
+                  type="checkbox"
+                  name="check"
+                  id="check"
+                />
+                <label class="form-check" for="check"
+                  >I accept the terms and conditions of the
+                  <span class="form-check-text">Privacy Policy</span>
+                </label>
+              </div>
+
+              <div class="form-btn">
+                <button type="submit" class="form-button">Send</button>
+              </div>
             </form>
             <button type="button" data-modal-close class="modal-btn">
               <svg class="modal-img">
