--- a/index.html
+++ b/index.html
@@ -107,33 +107,36 @@
                   name="email"
                   id="email"
                 />
-
                 <svg class="form-icon" width="18" height="24">
                   <use
                     href="./images/icons.svg/symbol-form-modal.svg#icon-form-icon-email"
                   ></use>
                 </svg>
               </div>
+
               <div class="form-field">
                 <label class="form-label" for="comment">Comment</label>
                 <textarea
                   class="form-comment"
                   name="comment"
                   id="comment"
-                  cols=""
-                  rows="10"
                   placeholder="Text input"
                 ></textarea>
               </div>
 
               <div class="form-field">
                 <input
-                  class="form-field-check"
+                  class="form-check"
                   type="checkbox"
                   name="check"
                   id="check"
                 />
-                <label class="form-check" for="check"
+                <svg class="checkbox-icon" width="16" height="16">
+                  <use
+                    href="./images/icons.svg/symbol-click.svg#icon-form-click"
+                  ></use>
+                </svg>
+                <label class="form-check-desc" for="check"
                   >I accept the terms and conditions of the
                   <span class="form-check-text">Privacy Policy</span>
                 </label>
@@ -143,6 +146,7 @@
                 <button type="submit" class="form-button">Send</button>
               </div>
             </form>
+
             <button type="button" data-modal-close class="modal-btn">
               <svg class="modal-img">
                 <use
@@ -156,7 +160,7 @@
       <!-- section features -->
       <section class="feature">
         <div class="container feature-content">
-          <h1 hidden>Advantages</h1>
+          <h1 class="visually-hidden">Advantages</h1>
           <ul class="feature-list list">
             <li class="feature-item">
               <div class="feature-pic">
