--- a/index.html
+++ b/index.html
@@ -124,23 +124,19 @@
                 ></textarea>
               </div>
 
-              <div class="form-field">
-                <input
-                  class="form-check"
-                  type="checkbox"
-                  name="check"
-                  id="check"
-                />
+              <label class="check-label" for="check">
+                <input class="check-input" type="checkbox" name="check" />
                 <svg class="checkbox-icon" width="16" height="16">
                   <use
                     href="./images/icons.svg/symbol-click.svg#icon-form-click"
                   ></use>
                 </svg>
-                <label class="form-check-desc" for="check"
+
+                <span class="form-check-desc"
                   >I accept the terms and conditions of the
-                  <span class="form-check-text">Privacy Policy</span>
-                </label>
-              </div>
+                  <span class="form-check-text">Privacy Policy</span></span
+                >
+              </label>
 
               <div class="form-btn">
                 <button type="submit" class="form-button">Send</button>
