--- a/portfolio.html
+++ b/portfolio.html
@@ -340,6 +340,29 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-box">
+          <p class="footer-form-title">Subscribe</p>
+          <form class="footer-form">
+            <input
+              class="footer-form-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              autocomplete="off"
+            />
+            <button type="button" class="footer-form-button">
+              Subscribe
+              <svg class="footer-form-icon">
+                <use
+                  href="./images/icons.svg/symbol-footer-form.svg#icon-footer-svg"
+                  width="24"
+                  height="24"
+                ></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
