--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
               </div>
 
               <label class="check-label" for="check">
-                <input class="check-input" type="checkbox" name="check" />
+                <input
+                  class="check-input"
+                  type="checkbox"
+                  name="check"
+                  id="check"
+                />
                 <svg class="checkbox-icon" width="16" height="16">
                   <use
                     href="./images/icons.svg/symbol-click.svg#icon-form-click"
