--- a/portfolio.html
+++ b/portfolio.html
@@ -355,7 +355,7 @@
               Subscribe
               <svg class="footer-form-icon">
                 <use
-                  href="./images/icons.svg/symbol-footer-form.svg#icon-footer-svg"
+                  href="./images/icons.svg/symbol-footer-form.svg#icon-Frame-footer"
                   width="24"
                   height="24"
                 ></use>
