--- a/index.html
+++ b/index.html
@@ -124,25 +124,27 @@
                 ></textarea>
               </div>
 
-              <label class="check-label" for="check">
-                <input
-                  class="check-input"
-                  type="checkbox"
-                  name="check"
-                  id="check"
-                />
-                <svg class="checkbox-icon" width="16" height="16">
-                  <use
-                    href="./images/icons.svg/symbol-click.svg#icon-form-click"
-                  ></use>
-                </svg>
+              <div class="form-field-checkbox">
+                <label class="check-label" for="check">
+                  <input
+                    class="check-input"
+                    type="checkbox"
+                    name="check"
+                    id="check"
+                  />
+                  <span class="modal-form-custom-checkbox"></span>
+                  <svg class="checkbox-icon" width="10" height="8">
+                    <use
+                      href="./images/icons.svg/symbol-footer-form.svg#icon-Frame-footer"
+                    ></use>
+                  </svg>
 
-                <span class="form-check-desc"
-                  >I accept the terms and conditions of the
-                  <span class="form-check-text">Privacy Policy</span></span
-                >
-              </label>
-
+                  <span class="form-check-desc"
+                    >I accept the terms and conditions of the
+                    <span class="form-check-text">Privacy Policy</span></span
+                  >
+                </label>
+              </div>
               <div class="form-btn">
                 <button type="submit" class="form-button">Send</button>
               </div>
