--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 ></textarea>
               </div>
 
-              <div class="form-field-checkbox">
+              <div class="form-field">
                 <label class="check-label" for="check">
                   <input
                     class="check-input"
@@ -132,12 +132,13 @@
                     name="check"
                     id="check"
                   />
-                  <span class="modal-form-custom-checkbox"></span>
-                  <svg class="checkbox-icon" width="10" height="8">
-                    <use
-                      href="./images/icons.svg/symbol-footer-form.svg#icon-Frame-footer"
-                    ></use>
-                  </svg>
+                  <span class="modal-form-custom-checkbox"
+                    ><svg class="checkbox-icon" width="10" height="8">
+                      <use
+                        href="./images/icons.svg/symbol-click.svg#icon-form-click"
+                      ></use>
+                    </svg>
+                  </span>
 
                   <span class="form-check-desc"
                     >I accept the terms and conditions of the
@@ -572,6 +573,27 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="footer-box">
+          <p class="footer-form-title">Subscribe</p>
+          <form class="footer-form">
+            <input
+              class="footer-form-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              autocomplete="off"
+            />
+            <button type="button" class="footer-form-button">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use
+                  href="./images/icons.svg/symbol-footer-form.svg#icon-telegram"
+                ></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
