--- a/portfolio.html
+++ b/portfolio.html
@@ -353,11 +353,9 @@
             />
             <button type="button" class="footer-form-button">
               Subscribe
-              <svg class="footer-form-icon">
+              <svg class="footer-form-icon" width="24" height="24">
                 <use
-                  href="./images/icons.svg/symbol-footer-form.svg#icon-Frame-footer"
-                  width="24"
-                  height="24"
+                  href="./images/icons.svg/symbol-footer-form.svg#icon-telegram"
                 ></use>
               </svg>
             </button>
