--- a/portfolio.html
+++ b/portfolio.html
@@ -351,7 +351,7 @@
               placeholder="E-mail"
               autocomplete="off"
             />
-            <button type="button" class="footer-form-button">
+            <button type="submit" class="footer-form-button">
               Subscribe
               <svg class="footer-form-icon" width="24" height="24">
                 <use
