--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <svg class="form-icon" width="18" height="24">
                   <use
-                    href="./images/icons.svg/symbol-form-modal.svg#icon-form-icon-tel"
+                    href="./images/icons.svg/symbol-form-modal.svg#icon-form-tel"
                   ></use>
                 </svg>
               </div>
@@ -585,7 +585,7 @@
               placeholder="E-mail"
               autocomplete="off"
             />
-            <button type="button" class="footer-form-button">
+            <button type="submit" class="footer-form-button">
               Subscribe
               <svg class="footer-form-icon" width="24" height="24">
                 <use
