--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <svg class="form-icon" width="18" height="24">
                   <use
-                    href="./images/icons.svg/symbol-icon-name.svg#icon-form-icon-name"
+                    href="./images/icons.svg/symbol-form-modal.svg#icon-form-icon-name"
                   ></use>
                 </svg>
               </div>
@@ -94,7 +94,7 @@
 
                 <svg class="form-icon" width="18" height="24">
                   <use
-                    href="./images/icons.svg/symbol-form-modal.svg#icon-form-tel"
+                    href="./images/icons.svg/symbol-form-modal.svg#icon-vector-tel"
                   ></use>
                 </svg>
               </div>
@@ -135,7 +135,7 @@
                   <span class="modal-form-custom-checkbox"
                     ><svg class="checkbox-icon" width="10" height="8">
                       <use
-                        href="./images/icons.svg/symbol-click.svg#icon-form-click"
+                        href="./images/icons.svg/symbol-form-modal.svg#icon-form-click"
                       ></use>
                     </svg>
                   </span>
@@ -154,7 +154,7 @@
             <button type="button" data-modal-close class="modal-btn">
               <svg class="modal-img">
                 <use
-                  href="./images/icons.svg/symbol-modal.svg#icon-vector-modal"
+                  href="./images/icons.svg/symbol-form-modal.svg#icon-vector-modal"
                 ></use>
               </svg>
             </button>
@@ -589,7 +589,7 @@
               Subscribe
               <svg class="footer-form-icon" width="24" height="24">
                 <use
-                  href="./images/icons.svg/symbol-footer-form.svg#icon-telegram"
+                  href="./images/icons.svg/symbol-form-modal.svg#icon-telegram"
                 ></use>
               </svg>
             </button>
